update resource stuff

--- a/syllabus/syllabus-resources.qmd
+++ b/syllabus/syllabus-resources.qmd
@@ -17,9 +17,18 @@ If you are having difficulty with the costs associated with this course (obtaini
 
 Contact the Duke OIT Service Desk at [oit.duke.edu/help](https://oit.duke.edu/help).
 
+## Assistance with Zoom or Canvas
+
+For technical help with Canvas visit [go.canvas.duke.edu/get-help/](https://go.canvas.duke.edu/get-help/). For technical help with Zoom contact the Duke OIT Service Desk at [oit.duke.edu/help](https://oit.duke.edu/help). You can also access the self-service help documentation for [Zoom](https://oit.duke.edu/help/articles/kb0029318/) and [Canvas](https://community.canvaslms.com/t5/Student-Guide/tkb-p/student).
+
+Note that we will be using Canvas minimally in this course (primarily for announcements and the grade book). All assignment submissions will take place on Gradescope and GitHub, and conversations will take place on Ed Discussion.
+
+Zoom will be used for online office hours and as a backup option should we need to hold the course online instead of in person.
+
 ## Academic support
 
-There are times you may need help with the class that is beyond what can be provided by the teaching team. In those instances, I encourage you to visit the Academic Resource Center. The [Academic Resource Center (ARC)](https://arc.duke.edu) offers free services to all students during their undergraduate careers at Duke. Services include Learning Consultations, Peer Tutoring and Study Groups, ADHD/LD Coaching, Outreach Workshops, and more. Because learning is a process unique to every individual, they work with each student to discover and develop their own academic strategy for success at Duke. Contact the ARC to schedule an appointment. Undergraduates in any year, studying any discipline can benefit! Contact [ARC\@duke.edu](mailto:arc@duke.edu), 919-684-5917.
+There are times you may need help with the class that is beyond what can be provided by the teaching team. In those instances, I encourage you to visit the Academic Resource Center. The [Academic Resource Center (ARC)](https://arc.duke.edu) offers free services to all students during their undergraduate careers at Duke. Services include Learning Consultations, Peer Tutoring and Study Groups, ADHD/LD Coaching, Outreach Workshops, and more. Because learning is a process unique to every individual, they work with each student to discover and develop their own academic strategy for success at Duke. Contact the ARC to schedule an appointment. Undergraduates in any year, studying any discipline can benefit! Contact [theARC\@duke.edu](mailto:theARC@duke.edu), 919-684-5917.
+
 
 ## Accessibility
 
@@ -30,13 +39,12 @@ Students should contact the SDAO to [request or update accommodations](https://a
 
 ## Mental health and well-being
 
-Duke is committed to holistic student well-being, including mental, emotional, and physical health. The university offers resources to help students manage daily stress, encourage intentional self-care, and access just-in-time support. If you find you need support, your mental and/or emotional health concerns are impacting your day-to-day activities and your academic performance, or you need someone to talk to, the resources below are available to you:
+Duke is committed to holistic student wellbeing, which includes one’s mental, emotional, and physical health. The university offers resources to help students manage daily stress, to encourage intentional self-care, and to access just-in-time support. If you find you need support, your mental and/or emotional health concerns are impacting your day-to-day activities, your academic performance, or you need someone to talk to, the resources below are available to you:
 
 -   [**DukeReach**](https://students.duke.edu/wellness/dukereach/)**:** DukeReach provides comprehensive outreach services to support students in managing all aspects of well-being, including referrals and follow-up services for students who are experiencing significant challenges related to mental health, physical health, social adjustment, and/or a variety of other stressors. You can reach the DukeReach team at [dukereach\@duke.edu](mailto:dukereach@duke.edu).
--   [**Counseling and Psychological Services (CAPS)**](https://students.duke.edu/wellness/caps/)**:** CAPS services include individual and group counseling services, psychiatric services, and workshops. CAPS also provides referrals to off-campus resources for specialized care. You can reach CAPS at (919) 660-1000.
--   [**TimelyCare**](https://Timelycare.com/bluedevils)**:** TimelyCare is an online platform that is a convenient, confidential, and free way for Duke students to receive 24/7 mental health support through TalkNow and scheduled counseling.
--   [**BC Fellows for Healthy Relationship**](https://students.duke.edu/wellness/duwell/sexualhealth/balthrop-cassidy-fellowship/)**:** The BC Fellows meet with students individually and in groups, supporting the development of healthy relationships and building meaningful community in all areas of a student’s life.
--   [**DukeLine**](https://sites.duke.edu/dukeline/)**:** Students who want to connect anonymously with a Peer Coach can text 984-230-4888 from 5 to 11 p.m. daily. DukeLine offers in-the-moment anonymous, non-emergency text support from a peer.
--   [**DuWell**](https://students.duke.edu/wellness/duwell/)**:** DuWell provides Moments of Mindfulness (stress management and resilience building) and meditation programming (Koru workshop) to assist students in developing a daily emotional well-being practice. All are welcome, and no experience is necessary. You can reach DuWell at (919) 681-8421.
+-   [**Counseling and Psychological Services (CAPS)**](https://students.duke.edu/wellness/caps/)**:** CAPS offers counseling services to Duke students including virtual appointments, and referrals in the community. You do not need an appointment for an initial assessment. You may walk in or call 919-660-1000 to get started. Hours: Monday-Friday 9:00am - 4:00pm. After hours counseling services are
+available at no additional cost to students, you can call: 919-660-1000 Option 2.
+-   [**TimelyCare**](https://Timelycare.com/bluedevils)[^1]**:** TimelyCare is an online platform that is a convenient, confidential, and free way for Duke students to receive 24/7 mental health support through TalkNow and scheduled counseling.
+-   [**Duke Student Health**](https://students.duke.edu/wellness/studenthealth/)**:** Student Health offers a wide range of healthcare services for all Duke students, many of which are covered by the student health fee. To make an appointment call (919) 681-9355. Hours: Monday - Friday, 8am - 4:30pm, Thursday 9am - 4:30pm. Closed from 12-12:30 each day.
 
-
+[^1]: Formerly known as Blue Devils Care.
